* Add config flag on whether or not to make source tarball

--- a/auto-build.conf
+++ b/auto-build.conf
@@ -6,6 +6,7 @@ GIT_WORK_TREE=/home/bryan/git/wraith
 GIT=/usr/local/bin/git
 PKG_NAME=wraith
 QUEUE_MINUTES=10
+DO_SRC=1
 
 SED=$(which gsed)
 if [ $? -eq 1 ]; then
