--- a/auto-build.conf
+++ b/auto-build.conf
@@ -7,6 +7,7 @@ GIT=/usr/local/bin/git
 PKG_NAME=wraith
 QUEUE_MINUTES=10
 DO_SRC=1
+POST_CMD="rsync -avH -e 'ssh -i /home/bryan/.ssh/id_dsa.botpack' ~/public_html/wraith/ botpack@www.botpack.net:public_html/wraith/"
 
 SED=$(which gsed)
 if [ $? -eq 1 ]; then
