* Hide errors when doing which

--- a/auto-build.conf
+++ b/auto-build.conf
@@ -9,12 +9,12 @@ QUEUE_MINUTES=9
 DO_SRC=1
 POST_CMD="rsync -avH -e 'ssh -i /home/bryan/.ssh/id_dsa.botpack' ~/public_html/wraith/ botpack@www.botpack.net:public_html/wraith/"
 
-SED=$(which gsed)
+SED=$(which gsed 2>/dev/null)
 if [ $? -eq 1 ]; then
 	SED=$(which sed)
 fi
 
-MAKE=$(which gmake)
+MAKE=$(which gmake 2>/dev/null)
 if [ $? -eq 1 ]; then
 	MAKE=$(which make)
 fi
