* Store bins in a Operating System dependent dir

--- a/auto-build.conf
+++ b/auto-build.conf
@@ -1,5 +1,5 @@
 AUTO_BUILD_DIR=/home/bryan/auto-build
-BIN_PATH=/home/bryan/public_html/wraith/bins
+BIN_PATH=/home/bryan/public_html/wraith/bins/$(uname -s)
 SRC_PATH=/home/bryan/public_html/wraith/src
 GIT_DIR=/home/bryan/git/wraith/.git
 GIT_WORK_TREE=/home/bryan/git/wraith
