--- a/auto-build.conf
+++ b/auto-build.conf
@@ -7,7 +7,7 @@ GIT=/usr/local/bin/git
 PKG_NAME=wraith
 QUEUE_MINUTES=9
 DO_SRC=0
-POST_CMD="rsync -avHc -e 'ssh -i /home/bryan/.ssh/id_dsa.botpack' ~/public_html/wraith/ botpack@botpack.net:public_html/wraith/"
+POST_CMD="rsync -avHc -e 'ssh -i /home/bryan/.ssh/id_dsa.botpack' ~/public_html/wraith/ botpack@botpack.net:public_html/archive/wraith/"
 
 SED=$(which gsed 2>/dev/null)
 if [ $? -eq 1 ]; then
