* Setup mirroring onto sourceforge

--- a/auto-build.conf
+++ b/auto-build.conf
@@ -1,13 +1,16 @@
 AUTO_BUILD_DIR=/home/bryan/auto-build
-BIN_PATH=/home/bryan/public_html/wraith/bins/$(uname -s)
-SRC_PATH=/home/bryan/public_html/wraith/src
+FILE_PATH=/home/bryan/public_html/wraith
+BIN_PATH=${FILE_PATH}/bins/$(uname -s)
+SRC_PATH=${FILE_PATH}/src
 GIT_DIR=/home/bryan/git/wraith/.git
 GIT_WORK_TREE=/home/bryan/git/wraith
 GIT=/usr/local/bin/git
 PKG_NAME=wraith
 QUEUE_MINUTES=9
 DO_SRC=0
-POST_CMD="rsync -avHc -e 'ssh -i /home/bryan/.ssh/id_dsa.botpack' ~/public_html/wraith/ botpack@botpack.net:public_html/archive/wraith/"
+SSH_KEY="/home/bryan/.ssh/id_dsa.botpack"
+SITE_MAIN="botpack@botpack.net:public_html/archive/wraith"
+SITE_MIRROR="bdrewery,wraithbotpack@frs.sourceforge.net:/home/frs/project/w/wr/wraithbotpack"
 
 SED=$(which gsed 2>/dev/null)
 if [ $? -eq 1 ]; then
